--- a/assets/style.css
+++ b/assets/style.css
@@ -83,9 +83,28 @@ h1 {
     text-transform: uppercase;
 }
 
+.options {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.option {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+}
+
 button {
     display: block;
     margin: 0 auto;
+}
+
+.hide {
+    display: none;
 }
 
 /* Header and footer styles */
@@ -216,7 +235,8 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1; /* Set z-index to place it behind the quiz elements */
+    z-index: -1;
+    /* Set z-index to place it behind the quiz elements */
 }
 
 .star {
@@ -229,9 +249,12 @@ footer {
 }
 
 @keyframes twinkle {
-    0%, 100% {
+
+    0%,
+    100% {
         opacity: 1;
     }
+
     50% {
         opacity: 0;
     }
