add styles on backgrounds and text size and etc.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0;
     padding: 0;
@@ -20,6 +21,7 @@ body {
     background-color: #ffffff;
     background-size: cover;
     background-position: center;
+    filter: contrast(1.2) brightness(1.2);
     border-radius: 50px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -32,20 +34,24 @@ body {
 /* Quiz section styles */
 .quiz-container .correct-feedback {
     color: green;
+     background-color: #f0f0f0;
 }
 
 .quiz-container .incorrect-feedback {
     color: red;
+     background-color: #f0f0f0;
 }
 
 .quiz-container .no-answer-feedback {
     color: blue;
+     background-color: #f0f0f0;
 }
 
 .container {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
+    
 }
 
 h1 {
@@ -61,7 +67,15 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+}
+#score {
+    background:#f0f0f0;
+    margin-bottom: autopx;
+}
+#score-value {
+    background:#f0f0f0;
+    margin-bottom: 15px;
 }
 
 /* Quiz section styles */
@@ -77,10 +91,19 @@ h1 {
 
 #question-container h2 {
     font-size: 24px;
-    color: #333;
+    color: #000;
     margin-bottom: 20px;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+.question{
+    font-size: 16px;
+    color: #070000;
+    margin-bottom: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+    
 }
 
 .options {
@@ -90,6 +113,11 @@ h1 {
     align-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
+    font-size: 14px;
+    color: #070000;
+    margin-bottom: 25px;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 .option {
@@ -101,6 +129,7 @@ h1 {
 button {
     display: block;
     margin: 0 auto;
+    margin-bottom: 15px;
 }
 
 .hide {
@@ -144,6 +173,7 @@ footer {
 #correct-answers {
     margin-right: 10px;
     color: green;
+   
 }
 
 #wrong-answers {
@@ -153,15 +183,17 @@ footer {
 
 
 #score-message {
-    color: green;
+    border-radius:35%;
+    background: #f0f0f0;
+    color: green;}
 }
 
 /* For small devices (e.g., smartphones) */
 @media only screen and (max-width: 600px) {
     .quiz-container {
-        max-width: 100%;
+        max-width: auto;
         height: auto;
-        margin-top: 75px;
+        margin-top: 85px;
     }
 
     .center-container {
@@ -231,13 +263,13 @@ footer {
 
 #stars-container {
     position: absolute;
-    top: 0;
+    top: 0px;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
     /* Set z-index to place it behind the quiz elements */
-}
+   }
 
 .star {
     position: absolute;
