--- a/assets/style.css
+++ b/assets/style.css
@@ -215,9 +215,10 @@ footer {
 
 #score-message {
     border-radius:50px;
-    background: #f0f0f0;
-    color: green;}
-}
+    background: #b8b8b8;
+    color: green;
+    }
+
 
 /* For small devices (e.g., smartphones) */
 @media only screen and (max-width: 600px) {
