--- a/assets/style.css
+++ b/assets/style.css
@@ -63,7 +63,7 @@ h1 {
     background: #a5a8a7;
     border-radius: 20px;
 }
-p {
+label1 {
     text-align: center;
     margin-bottom: 20px;
     background: #898989;
